--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,8 @@
     "com.unity.ide.rider": "3.0.20",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.multiplayer.tools": "1.1.0",
+    "com.unity.netcode.gameobjects": "1.4.0",
     "com.unity.render-pipelines.high-definition": "15.0.5",
     "com.unity.test-framework": "1.3.3",
     "com.unity.textmeshpro": "3.0.6",
