--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -8,6 +8,7 @@
     "com.unity.inputsystem": "1.5.1",
     "com.unity.multiplayer.tools": "1.1.0",
     "com.unity.netcode.gameobjects": "1.4.0",
+    "com.unity.probuilder": "5.0.7",
     "com.unity.render-pipelines.high-definition": "15.0.5",
     "com.unity.test-framework": "1.3.3",
     "com.unity.textmeshpro": "3.0.6",
